--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pbl2">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,16 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pbl2">
         <activity
-            android:name=".SignUp"
+            android:name=".view.auth.SignUp"
             android:exported="false" />
         <activity
-            android:name=".SignIn"
+            android:name=".view.auth.SignIn"
             android:exported="false" />
         <activity
-            android:name=".WelcomeScreen"
-            android:exported="false" />
-        <activity
-            android:name=".SplashScreen"
+            android:name=".view.ui.WelcomeScreen"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
